force-app/main/default/objects/Territory__c/Territory__c.object-meta.xml
<CustomObject>
    <description>RevenueTrust Territory/Scope abstraction. Shared across Forecasting and Incentives modules. Platform-owned hierarchy - not a reference to standard Territory2.</description>
    <label>Territory</label>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>