force-app/main/default/objects/Territory__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>ISO currency code for this territory</description>
    <label>Local Currency</label>
    <length>5</length>
    <type>Text</type>
</CustomField>