force-app/main/default/objects/Territory__c/fields/Parent_Territory__c.field-meta.xml
<CustomField>
    <fullName>Parent_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self-referential lookup for territory hierarchy</description>
    <label>Parent Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Child Territories</relationshipLabel>
    <relationshipName>Child_Territories</relationshipName>
    <type>Lookup</type>
</CustomField>