force-app/main/default/objects/Territory__c/fields/Source_Territory2_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Territory2_Id__c</fullName>
    <description>If synced from ETM, the original Territory2.Id for traceability</description>
    <externalId>true</externalId>
    <label>Source Territory2 ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>