force-app/main/default/objects/Territory__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <description>How this territory record was created</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>ETM_Sync</fullName><default>false</default><label>ETM Sync</label></value>
            <value><fullName>Manual</fullName><default>true</default><label>Manual</label></value>
            <value><fullName>Imported</fullName><default>false</default><label>Imported</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>